download pages: contratantes, funcionarios, imoveis, usuarios e vendedores

--- a/src/app/pages/imoveis/imovel-grid/imovel-grid.component.html
+++ b/src/app/pages/imoveis/imovel-grid/imovel-grid.component.html
@@ -6,6 +6,7 @@
         <input matInput placeholder="Pesquisar por Nome ou CPF" [(ngModel)]="searchTerm" (keyup)="search()" />
         <mat-icon matPrefix>search</mat-icon>
       </mat-form-field>
+      <button  style="margin-top:10px; margin-left: 20px;" class="icon-blue" mat-icon-button (click)="generateExcel()"> <mat-icon >download</mat-icon></button>
       <button style="margin-top:17px; margin-left: 20px;" mat-raised-button color="primary"  (click)="addNew()">Novo Imóvel</button>
     </div>
   </div>
