--- a/src/app/pages/contratantes/contratante-grid/contratante-grid.component.html
+++ b/src/app/pages/contratantes/contratante-grid/contratante-grid.component.html
@@ -50,6 +50,7 @@
         <input matInput placeholder="Pesquisar por Nome ou CPF" [(ngModel)]="searchTerm" (keyup)="search()" />
         <mat-icon matPrefix>search</mat-icon>
       </mat-form-field>
+      <button  style="margin-top:10px; margin-left: 20px;" class="icon-blue" mat-icon-button (click)="generateExcel()"> <mat-icon >download</mat-icon></button>
       <button style="margin-top:17px; margin-left: 20px; padding: 15px 50px;" (click)="search()" mat-stroked-button color="primary">Filtrar</button>
       <button style="margin-top:17px; margin-left: 20px;" mat-raised-button color="primary"  (click)="adicionarNovo()">Novo Contratante</button>
      </div>
