--- a/src/app/pages/vendedores/vendedor-grid/vendedor-grid.component.html
+++ b/src/app/pages/vendedores/vendedor-grid/vendedor-grid.component.html
@@ -5,7 +5,7 @@
       <input matInput placeholder="Pesquisar por Nome ou CPF" [(ngModel)]="searchTerm" (keyup)="search()" />
       <mat-icon matPrefix>search</mat-icon>
     </mat-form-field>
-
+    <button  style="margin-top:10px; margin-left: 20px;" class="icon-blue" mat-icon-button (click)="generateExcel()"> <mat-icon >download</mat-icon></button>
     <button style="margin-top:17px;" mat-raised-button color="primary"  (click)="addNewVendedor()">Novo Vendedor</button>
   </div>
 
