--- a/src/app/pages/status/status-grid/status-grid.component.html
+++ b/src/app/pages/status/status-grid/status-grid.component.html
@@ -9,6 +9,7 @@
     </div>
 
     <div class="buttonArea">
+      <button  style="margin-top:10px; margin-left: 20px;" class="icon-blue" mat-icon-button (click)="generateExcel()"> <mat-icon >download</mat-icon></button>
       <button style="margin-top:17px;" mat-raised-button color="primary" (click)="addNew()">Novo Status</button>
       <button style="margin: 17px 0px;" mat-raised-button  (click)="updateAllByNucleo()">Atualizar por Núcleo</button>
     </div>
