--- a/src/app/pages/planos/planos-form/planos-form.component.html
+++ b/src/app/pages/planos/planos-form/planos-form.component.html
@@ -41,26 +41,24 @@
         <mat-form-field>
           <mat-label >Porcentagem da Entrada</mat-label>
           <mat-select [formControl]="entradaFormControl" >
-            <mat-option value="5"> 5% </mat-option>
-            <mat-option value="10"> 10% </mat-option>
-            <mat-option value="15"> 15% </mat-option>
-            <mat-option value="20"> 20% </mat-option>
-            <mat-option value="25"> 25% </mat-option>
-            <mat-option value="30"> 30% </mat-option>
-            <mat-option value="35"> 35% </mat-option>
-            <mat-option value="40"> 40% </mat-option>
-            <mat-option value="45"> 45% </mat-option>
-            <mat-option value="50"> 50% </mat-option>
-            <mat-option value="55"> 55% </mat-option>
-            <mat-option value="60"> 60% </mat-option>
-            <mat-option value="65"> 65% </mat-option>
-            <mat-option value="70"> 70% </mat-option>
-            <mat-option value="75"> 75% </mat-option>
-            <mat-option value="80"> 80% </mat-option>
-            <mat-option value="85"> 85% </mat-option>
-            <mat-option value="90"> 90% </mat-option>
-            <mat-option value="95"> 95% </mat-option>
-            <mat-option value="100"> 100% </mat-option>
+            <mat-option *ngFor="let parcela of percentageOptions;" [value]="parcela.value"  >
+              {{ parcela.label }}
+            </mat-option>
+          </mat-select>
+          @if (entradaFormControl.hasError('required')) {
+            <mat-error>Este campo é <strong>obrigatório</strong></mat-error>
+          }
+        </mat-form-field>
+
+        <mat-form-field>
+          <mat-label >Porcentagem do Desconto à vista</mat-label>
+          <mat-select [formControl]="descontoFormControl" >
+            <mat-option [value]="null"  >
+              SEM DESCONTO
+            </mat-option>
+            <mat-option *ngFor="let parcela of percentageOptions;" [value]="parcela.value"  >
+              {{ parcela.label }}
+            </mat-option>
           </mat-select>
           @if (entradaFormControl.hasError('required')) {
             <mat-error>Este campo é <strong>obrigatório</strong></mat-error>
