--- a/src/app/pages/planos/planos-grid/planos-grid.component.html
+++ b/src/app/pages/planos/planos-grid/planos-grid.component.html
@@ -22,6 +22,10 @@
       <th mat-header-cell *matHeaderCellDef > Entrada</th>
       <td mat-cell *matCellDef="let element"> {{element.entrada + "%"}} </td>
     </ng-container>
+    <ng-container matColumnDef="desconto">
+      <th mat-header-cell *matHeaderCellDef > Desconto </th>
+      <td mat-cell *matCellDef="let element"> {{element.desconto ? element.desconto+'%': 'SEM DESCONTO'}} </td>
+    </ng-container>
     <ng-container matColumnDef="numeroParcelas">
       <th mat-header-cell *matHeaderCellDef > Máximo de parcelas</th>
       <td mat-cell *matCellDef="let element"> {{element.numeroParcelas}} </td>
