--- a/src/app/pages/contratantes/contratante-form/contratante-form.component.html
+++ b/src/app/pages/contratantes/contratante-form/contratante-form.component.html
@@ -230,13 +230,13 @@
           </mat-tab>
 
         </mat-tab-group>
-          <div class="area-botao-form " *ngIf="isLoggedIn && this.contratanteId === '' || this.contratanteId === undefined">
-            <button mat-raised-button color="primary" (click)="create()" [disabled]="!formValid()">Cadastrar</button>
+          <div class="area-botao-form " *ngIf=" this.contratanteId === '' || this.contratanteId === undefined">
+            <button mat-raised-button color="primary" *ngIf="this.access === 'total'" (click)="create()" [disabled]="!formValid()">Cadastrar</button>
             <button  mat-raised-button color="link" routerLink="/contratante/lista">Voltar</button>
           </div>
   
-          <div class="area-botao-form " *ngIf="isLoggedIn && this.contratanteId !== '' && this.contratanteId !== undefined">
-            <button *ngIf="!visualizar" mat-raised-button color="primary" (click)="update()" [disabled]="!formValid()"> Atualizar</button>
+          <div class="area-botao-form " *ngIf="this.contratanteId !== '' && this.contratanteId !== undefined">
+            <button *ngIf="!visualizar && this.access === 'total'" mat-raised-button color="primary" (click)="update()" [disabled]="!formValid()"> Atualizar</button>
             <button mat-raised-button color="link" routerLink="/contratante/lista">Voltar</button>
           </div>
       </mat-card-content>
