--- a/src/app/pages/imoveis/imovel-form/imovel-form.component.html
+++ b/src/app/pages/imoveis/imovel-form/imovel-form.component.html
@@ -221,12 +221,12 @@
   
   
         <div class="area-botao-form " *ngIf="isLoggedIn && this.imovelId === '' || this.imovelId === undefined">
-          <button mat-raised-button color="primary" (click)="create()" [disabled]="!formValid()">Cadastrar</button>
+          <button mat-raised-button color="primary" *ngIf="this.access === 'total'" (click)="create()" [disabled]="!formValid()">Cadastrar</button>
           <button  mat-raised-button color="link" routerLink="/imovel/lista">Voltar</button>
         </div>
 
         <div class="area-botao-form " *ngIf="isLoggedIn && this.imovelId !== '' && this.imovelId !== undefined">
-          <button *ngIf="!visualizar" mat-raised-button color="primary" (click)="update()"  [disabled]="!formValid()"> Atualizar</button>
+          <button *ngIf="!visualizar && this.access === 'total'" mat-raised-button color="primary" (click)="update()"  [disabled]="!formValid()"> Atualizar</button>
           <button mat-raised-button color="link" routerLink="/imovel/lista">Voltar</button>
         </div>
       </mat-card-content>
