--- a/src/app/pages/vendedores/vendedor-grid/vendedor-grid.component.html
+++ b/src/app/pages/vendedores/vendedor-grid/vendedor-grid.component.html
@@ -43,10 +43,10 @@
         <button class="icon-blue" mat-icon-button (click)="viewItem(element)">
           <mat-icon >visibility</mat-icon>
         </button>
-        <button class="icon-green" mat-icon-button (click)="editItem(element)">
+        <button *ngIf="this.access === 'total'" class="icon-green" mat-icon-button (click)="editItem(element)">
           <mat-icon >edit</mat-icon>
         </button>
-        <button class="icon-red" mat-icon-button  (click)="deleteItem(element)">
+        <button *ngIf="this.access === 'total'" class="icon-red" mat-icon-button  (click)="deleteItem(element)">
           <mat-icon >delete</mat-icon>
         </button>
       </td>
