--- a/src/app/pages/cartorio/cartorio-form/cartorio-form.component.html
+++ b/src/app/pages/cartorio/cartorio-form/cartorio-form.component.html
@@ -179,13 +179,13 @@
     
     
     
-          <div class="area-botao-form " *ngIf="isLoggedIn && this.cartorioId === ''|| this.cartorioId === undefined">
-            <button mat-raised-button color="primary" (click)="create()" [disabled]="!formValid()">Cadastrar</button>
+          <div class="area-botao-form " *ngIf="this.cartorioId === ''|| this.cartorioId === undefined">
+            <button mat-raised-button *ngIf="this.access === 'total'" color="primary" (click)="create()" [disabled]="!formValid()">Cadastrar</button>
             <button  mat-raised-button color="link" routerLink="/cartorio/lista">Voltar</button>
           </div>
   
-          <div class="area-botao-form " *ngIf="isLoggedIn && this.cartorioId !== '' && this.cartorioId !== undefined">
-            <button *ngIf="!visualizar" mat-raised-button color="primary" (click)="update()"  [disabled]="!formValid()"> Atualizar</button>
+          <div class="area-botao-form " *ngIf="this.cartorioId !== '' && this.cartorioId !== undefined">
+            <button *ngIf="!visualizar && this.access === 'total'" mat-raised-button color="primary" (click)="update()"  [disabled]="!formValid()"> Atualizar</button>
             <button mat-raised-button color="link" routerLink="/cartorio/lista">Voltar</button>
           </div>
         </mat-card-content>
