--- a/src/app/pages/planos/planos-form/planos-form.component.html
+++ b/src/app/pages/planos/planos-form/planos-form.component.html
@@ -84,12 +84,12 @@
       </div>
 
       <div class="area-botao-form " *ngIf="this.planoId === '' || this.planoId === undefined">
-        <button mat-raised-button color="primary" (click)="create()" [disabled]="!validForm()">Cadastrar</button>
-        <button *ngIf="isLoggedIn" mat-raised-button color="link" routerLink="/planos/lista">Voltar</button>
+        <button mat-raised-button color="primary" *ngIf="this.access === 'total'" (click)="create()" [disabled]="!validForm()">Cadastrar</button>
+        <button  mat-raised-button color="link" routerLink="/planos/lista">Voltar</button>
       </div>
 
-      <div class="area-botao-form " *ngIf="isLoggedIn && this.planoId !== '' && this.planoId !== undefined">
-        <button *ngIf="!view" mat-raised-button color="primary" (click)="update()" [disabled]="!validForm()"> Atualizar</button>
+      <div class="area-botao-form " *ngIf="this.planoId !== '' && this.planoId !== undefined">
+        <button *ngIf="!view && this.access === 'total'" mat-raised-button color="primary" (click)="update()" [disabled]="!validForm()"> Atualizar</button>
         <button mat-raised-button color="link" routerLink="/planos/lista">Voltar</button>
       </div>
     </mat-card-content>
