--- a/src/app/pages/prefeitura/prefeitura-form/prefeitura-form.component.html
+++ b/src/app/pages/prefeitura/prefeitura-form/prefeitura-form.component.html
@@ -187,13 +187,13 @@
           </mat-tab>
         </mat-tab-group>
 
-        <div class="area-botao-form " *ngIf="isLoggedIn && this.prefeituraId === '' || this.prefeituraId === undefined">
-          <button mat-raised-button color="primary" (click)="create()" [disabled]="!formValid()">Cadastrar</button>
+        <div class="area-botao-form " *ngIf="this.prefeituraId === '' || this.prefeituraId === undefined">
+          <button mat-raised-button color="primary" *ngIf="this.access === 'total'" (click)="create()" [disabled]="!formValid()">Cadastrar</button>
           <button  mat-raised-button color="link" routerLink="/prefeitura/lista">Voltar</button>
         </div>
 
-        <div class="area-botao-form " *ngIf="isLoggedIn && this.prefeituraId !== '' && this.prefeituraId !== undefined">
-          <button *ngIf="!visualizar" mat-raised-button color="primary" (click)="update()"  [disabled]="!formValid()"> Atualizar</button>
+        <div class="area-botao-form " *ngIf="this.prefeituraId !== '' && this.prefeituraId !== undefined">
+          <button *ngIf="!visualizar && this.access === 'total'" mat-raised-button color="primary" (click)="update()"  [disabled]="!formValid()"> Atualizar</button>
           <button mat-raised-button color="link" routerLink="/prefeitura/lista">Voltar</button>
         </div>
       </mat-card-content>
