--- a/src/app/components/menu/menu.component.html
+++ b/src/app/components/menu/menu.component.html
@@ -1,5 +1,5 @@
 
-<nav *ngIf="isAuthenticated()" class ="menu" [ngClass]="{'menu-open': isMenuOpen, 'menu-closed': !isMenuOpen}">
+<nav *ngIf="isLoggedIn" class ="menu" [ngClass]="{'menu-open': isMenuOpen, 'menu-closed': !isMenuOpen}">
   <div class="headerAreaMenu">  
     <div class="logoIconMenu"> 
       <mat-icon (click)="toggleMenu()">menu</mat-icon> 
