--- a/src/app/pages/acessos/acesso-grid/acesso-grid.component.html
+++ b/src/app/pages/acessos/acesso-grid/acesso-grid.component.html
@@ -1,6 +1,6 @@
 
 
-  <div class="page-container-grid" style="margin-top:50px;">
+  <div class="page-container-grid">
     <h1>Listagem de Grupos</h1>
     <div class="header-grid">
       <mat-form-field class="search-field-grid">
