--- a/src/app/pages/usuarios/usuario-form/usuario-form.component.html
+++ b/src/app/pages/usuarios/usuario-form/usuario-form.component.html
@@ -5,7 +5,7 @@
     </mat-card-header>
 
     <mat-card-content>
-      <mat-form-field *ngIf="this.access === 'total'"> 
+      <mat-form-field *ngIf="this.perfilAcesso === 'total'"> 
         <mat-label>Perfil</mat-label>
         <input type="text"
                 [readonly]="view"
