--- a/src/app/pages/gerenciar-documento/gerenciar-documento-form/gerenciar-documento-form.component.css
+++ b/src/app/pages/gerenciar-documento/gerenciar-documento-form/gerenciar-documento-form.component.css
@@ -12,27 +12,30 @@
 .info-title{
   text-align: center;
   color: #ccc;
-  font-size: 13px;
+  font-size: 16px;
+  margin: 10px;
   font-weight: bold;
 }
 
 .info-content{
   display: flex;
+  width: 100%;
   flex-wrap: wrap;
-  padding: 10px;
+  margin: 0px;
+  margin: 0px;
   font-size: 12px;
   div {
-    margin:10px;
-    border-radius: 5px;
+    border: 1px solid #ccc;
     padding: 10px;
   }
   b {
     font-size: 10px;
     font-style: italic;
   }
-  span{
-    margin-bottom: -20px;
-  }
+}
+
+.info-flex{
+  flex: 1;
 }
 
 @media screen and (max-width: 810px) {
